--- a/Visual_laba1/Visual_laba1.csproj
+++ b/Visual_laba1/Visual_laba1.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Array.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="String.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
