--- a/Visual_laba1/Visual_laba1.csproj
+++ b/Visual_laba1/Visual_laba1.csproj
@@ -42,10 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Array.cs" />
+    <Compile Include="MyArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="String.cs" />
+    <Compile Include="MyString.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
